@@ -31,6 +31,10 @@
 0110110101001100	xc2c256-tq144		XC2C256-TQ144
 0110111001011110	xc2c64a-vq44		XC2C64-VQ44
 0000101000100000	xc2s300e		XC2S300E
+# XC2C
+0110111000011010    xc2c32a-cv64	xc2c32a-cv64
+0110111000011011    xc2c32a-cp56	xc2c32a-cp56
+0110111000011100    xc2c32a-vq44	xc2c32a-vq44
 # System ACE
 1010000000000001	xccace	xccace
 # XC3S / XC3SE / XC3A
